Branch version 1.1.0 (#5)
Co-authored-by: igor.icelic <igoricelic@outlook.com>